Added sonar statistics